--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Yellowen Developers
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+{% for post in site.posts %}
+<div class="activity">
+  <div class="activity-text">
+    <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+    <p>{{ post.content }}</p>
+    <span class="date">{{ post.date | date_to_string }}</span>
+  </div>
 </div>
+
+{% endfor %}
