--- a/src/index.html
+++ b/src/index.html
@@ -100,8 +100,17 @@ title: Yellowen Developers
 <section class="step center project">
   <article>
     <div>
-      {% for project in site.projects %}
-      {{ project.name }}sdadasd
+      {% for project in site.prj %}
+      <div class="bullet three-col-bullet">
+        <div class="bullet-icon bullet-icon-1">
+          {{ project.page.title }}
+
+        </div>
+        <div class="bullet-content">
+          <h2>{{ project['title'] }}</h2>
+          <p>{{ project['short_desc'] }}</p>
+        </div>
+      </div>
       {% endfor %}
       <div class="bullets">
         <div class="bullet three-col-bullet">
